force-app/main/default/objects/PCS__c/PCS__c.object-meta.xml
<CustomObject>
    <label>Projeto</label>
    <nameField>
        <displayFormat>PCS-{00000}</displayFormat>
        <label>PCS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>