force-app/main/default/objects/PCS__c/fields/Adesao__c.field-meta.xml
<CustomField>
    <fullName>Adesao__c</fullName>
    <label>Adesão</label>
    <required>true</required>
    <type>Date</type>
</CustomField>