force-app/main/default/objects/PCS__c/fields/AnoReferenciaIndicadores__c.field-meta.xml
<CustomField>
    <fullName>AnoReferenciaIndicadores__c</fullName>
    <label>Ano de Referência dos Indicadores</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>