force-app/main/default/objects/PCS__c/fields/CodigoIBGE__c.field-meta.xml
<CustomField>
    <fullName>CodigoIBGE__c</fullName>
    <label>Código IBGE</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>