force-app/main/default/objects/PCS__c/fields/DataHoraUploadJustificativaPDM__c.field-meta.xml
<CustomField>
    <fullName>DataHoraUploadJustificativaPDM__c</fullName>
    <label>Data/Hora Upload Justificativa PDM</label>
    <type>DateTime</type>
</CustomField>