force-app/main/default/objects/PCS__c/fields/DataHoraUploadPDM__c.field-meta.xml
<CustomField>
    <fullName>DataHoraUploadPDM__c</fullName>
    <label>Data/Hora Upload PDM</label>
    <type>DateTime</type>
</CustomField>