force-app/main/default/objects/PCS__c/fields/FimMandato__c.field-meta.xml
<CustomField>
    <fullName>FimMandato__c</fullName>
    <label>Fim Mandato</label>
    <type>Date</type>
</CustomField>