force-app/main/default/objects/PCS__c/fields/InicioMandato__c.field-meta.xml
<CustomField>
    <fullName>InicioMandato__c</fullName>
    <label>Início Mandato</label>
    <type>Date</type>
</CustomField>