force-app/main/default/objects/PCS__c/fields/Partido__c.field-meta.xml
<CustomField>
    <fullName>Partido__c</fullName>
    <formula>Conta__r.Partido__r.Sigla__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partido</label>
    <type>Text</type>
</CustomField>