force-app/main/default/objects/PCS__c/fields/PazoRestante__c.field-meta.xml
<CustomField>
    <fullName>PazoRestante__c</fullName>
    <formula>TEXT(PrazoPDM__c - Today()) &amp; &quot; dias&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pazo Restante</label>
    <type>Text</type>
</CustomField>