force-app/main/default/objects/PCS__c/fields/PrazoAtualizacaoIndicadores__c.field-meta.xml
<CustomField>
    <fullName>PrazoAtualizacaoIndicadores__c</fullName>
    <label>Prazo Atualização Indicadores</label>
    <type>Date</type>
</CustomField>