force-app/main/default/objects/PCS__c/fields/PrazoPDM__c.field-meta.xml
<CustomField>
    <fullName>PrazoPDM__c</fullName>
    <formula>Adesao__c +120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo PDM</label>
    <type>Date</type>
</CustomField>