force-app/main/default/objects/PCS__c/fields/Prefeito__c.field-meta.xml
<CustomField>
    <fullName>Prefeito__c</fullName>
    <formula>Conta__r.Prefeito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefeito</label>
    <type>Text</type>
</CustomField>