force-app/main/default/objects/PCS__c/fields/ProporcaoIndicadoresPreenchidos__c.field-meta.xml
<CustomField>
    <fullName>ProporcaoIndicadoresPreenchidos__c</fullName>
    <label>Proporção de Indicadores Preenchidos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>