force-app/main/default/objects/PCS__c/fields/QuantidadeIndicadoresPreenchidos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeIndicadoresPreenchidos__c</fullName>
    <label>Quantidade de Indicadores Preenchidos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>