force-app/main/default/objects/PCS__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projetos Responsavel</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>