force-app/main/default/objects/PCS__c/fields/ResponsavelJustificativa__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelJustificativa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável Justificativa</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projetos Responsável Justificativa</relationshipLabel>
    <relationshipName>ProjetosResponsavelJustificativa</relationshipName>
    <type>Lookup</type>
</CustomField>