force-app/main/default/objects/PCS__c/fields/StatusPDM__c.field-meta.xml
<CustomField>
    <fullName>StatusPDM__c</fullName>
    <label>Status PDM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>No Prazo</fullName>
                <default>true</default>
                <label>No Prazo</label>
            </value>
            <value>
                <fullName>Atrasado</fullName>
            </value>
            <value>
                <fullName>Prazo Estendido</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>