force-app/main/default/objects/PCS__c/fields/TelefoneFixo__c.field-meta.xml
<CustomField>
    <fullName>TelefoneFixo__c</fullName>
    <label>Telefone Fixo</label>
    <type>Phone</type>
</CustomField>