force-app/main/default/objects/PCS__c/recordTypes/PCS.recordType-meta.xml
<RecordType>
    <fullName>PCS</fullName>
    <active>true</active>
    <label>PCS</label>
</RecordType>