force-app/main/default/objects/PCS__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>Responsavel__c</columns>
    <columns>PrazoPDM__c</columns>
    <columns>StatusPDM__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todos Projetos</label>
</ListView>